--- a/mernbackend/views/index.hbs
+++ b/mernbackend/views/index.hbs
@@ -16,11 +16,17 @@
     <div>
         <nav>
             <ul class="navbar">
-                <a href="register.hbs"><li>Register</li></a>
+                <a href="#banner"><li>Home</li></a>
                 <a href="#menu"><li>Menu</li></a>
                 <a href="#special"><li>Today's-Special</li></a>
                 <a href="#foot"><li>Contact-Us</li></a>
             </ul>
+
+            <ul class="form">
+                <a href="register.hbs"><li>Register</li></a>
+                <a href=""><li>Login</li></a>
+            </ul>
+        </nav>    
     </div>
     
     <div class="nav" id="banner">
