--- a/mernbackend/views/index.hbs
+++ b/mernbackend/views/index.hbs
@@ -24,7 +24,7 @@
 
             <ul class="form">
                 <a href="register.hbs"><li>Register</li></a>
-                <a href=""><li>Login</li></a>
+                <a href="login.hbs"><li>Login</li></a>
             </ul>
         </nav>    
     </div>
