--- a/mernbackend/views/login.hbs
+++ b/mernbackend/views/login.hbs
@@ -74,7 +74,7 @@
             <input type="text" name="email" placeholder="Email">
             <p>Password :</p>
             <input type="text" name="password" placeholder="Password">
-            <button type="submit">Submit</button>
+            <button type="submit">Login</button>
         </form>
     </div>
 </body>
