--- a/mernbackend/views/index.hbs
+++ b/mernbackend/views/index.hbs
@@ -65,6 +65,10 @@
             <hr>
         </ul>
     </div>
+
+    <div class="notify">
+        <a href="notify.hbs"><button>Notify</button></a>
+    </div>
     
     <div class="footer">
 
