:fire: payment method added

--- a/mernbackend/views/menu.hbs
+++ b/mernbackend/views/menu.hbs
@@ -383,7 +383,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/idali.jpg" alt=""></li>
-                        <button class="b0">Order</button>
+                        <a href="payment.hbs"><button class="b0">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -395,7 +395,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/idaliwada.jpg" alt=""></li>
-                        <button class="b1">Order</button>
+                        <a href="payment.hbs"><button class="b1">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -407,7 +407,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/medhuvada.jpg" alt=""></li>
-                        <button class="b2">Order</button>
+                        <a href="payment.hbs"><button class="b2">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -419,7 +419,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/onionuttappa.jpg" alt=""></li>
-                        <button>Order</button>
+                        <a href="payment.hbs"><button>Order</button></a>               
                     </ul>
                 </li>
                 <hr>
@@ -431,7 +431,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/onioncheese.jpg" alt=""></li>
-                        <button class="b3">Order</button>
+                        <a href="payment.hbs"><button class="b3">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -443,7 +443,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/onionbutter.webp" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -455,7 +455,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/onionbiuttercheese.webp" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -467,7 +467,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/dahiwada.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -479,7 +479,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/sadadosa.png" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -491,7 +491,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/masaladosa.jpg" alt=""></li>
-                        <button class="b0">Order</button>
+                        <a href="payment.hbs"><button class="b0">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -503,7 +503,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/butterplain.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -515,7 +515,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/ravadosa.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -527,7 +527,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/ravadosa.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -539,7 +539,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/ravamasala.png" alt=""></li>
-                        <button class="b5">Order</button>
+                        <a href="payment.hbs"><button class="b5">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -551,7 +551,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/cheesedosa.jpg" alt=""></li>
-                        <button class="b6">Order</button>
+                        <a href="payment.hbs"><button class="b6">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -575,7 +575,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/buttercheesedosa.png" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -588,7 +588,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/gheedosa.png" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -608,7 +608,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/manchurian.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -620,7 +620,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/gobimanchurian.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -632,7 +632,7 @@
                     </ul>
                     <ul class="dish2" id="pm">
                         <li><img src="Images/paneermanchurian.png" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -644,7 +644,7 @@
                     </ul>
                     <ul class="dish2" id="pm">
                         <li><img src="Images/onionbajji.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -656,7 +656,7 @@
                     </ul>
                     <ul class="dish2" id="pm">
                         <li><img src="Images/masalachips.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -668,7 +668,7 @@
                     </ul>
                     <ul class="dish2" id="pm">
                         <li><img src="Images/masalapapad.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -680,7 +680,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/rosted.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -699,7 +699,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/pakoda.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -712,7 +712,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/chana.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -729,7 +729,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images//paneermasala.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -741,7 +741,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/paneermasala2.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -753,7 +753,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/cholepaneer.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -765,7 +765,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/paneermasala4.webp" alt=""></li>
-                        <button class="b7">Order</button>
+                        <a href="payment.hbs"><button class="b7">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -777,7 +777,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/shahi-paneer.jpg.webp" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -789,7 +789,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/shahi-paneer-1.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -801,7 +801,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/paneer-curry.webp" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -813,7 +813,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/shahi-paneer-1.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -825,7 +825,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/paneer5.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -839,7 +839,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/kolhapuri.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -858,7 +858,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/tandorroti.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -869,7 +869,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/butterroti.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -881,7 +881,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/jawarroti.jpg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -899,7 +899,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/steamrice.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -910,7 +910,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/friedrice.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -921,7 +921,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/curdrice.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -940,7 +940,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/pizza.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -951,7 +951,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/burger.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -962,7 +962,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/sandwich.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -973,7 +973,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/donut.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -990,7 +990,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/chocolate.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -1002,7 +1002,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/vanila.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -1014,7 +1014,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/butterscotch.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -1026,7 +1026,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/pista.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
@@ -1038,7 +1038,7 @@
                     </ul>
                     <ul class="dish2">
                         <li><img src="Images/blackcurrent.jpeg" alt=""></li>
-                        <button class="b4">Order</button>
+                        <a href="payment.hbs"><button class="b4">Order</button></a>
                     </ul>
                 </li>
                 <hr>
