--- a/mernbackend/views/notify.hbs
+++ b/mernbackend/views/notify.hbs
@@ -72,16 +72,16 @@
         <h1>Absent Status</h1>
         <form action="/notify" method="POST">
         
-            <p>First Name :</p>
+            {{!-- <p>First Name :</p>
             <input type="text" name="firstname" placeholder="First Name">
             <p>Last Name :</p>
             <input type="text" name="lastname" placeholder="Last Name">
             <p>Phone :</p>
-            <input type="text" name="phone" placeholder="Phone">
+            <input type="text" name="phone" placeholder="Phone"> --}}
             <p>Email :</p>
             <input type="text" name="email" placeholder="Email">
-            <p>Mess Id :</p>
-            <input type="text" name="messid" placeholder="Mess Id">                 
+            {{!-- <p>Mess Id :</p>
+            <input type="text" name="messid" placeholder="Mess Id"> --}}
             <button type="submit">Submit</button>
             
         </form>
