--- a/mernbackend/views/login.hbs
+++ b/mernbackend/views/login.hbs
@@ -10,7 +10,8 @@
     *{
         padding:0;
         margin:0;
-        font-family: sans-serif;
+        font-family:cursive;
+        {{!-- font-family: sans-serif; --}};
     }
 
     body{
@@ -23,16 +24,20 @@
 
     .login{
         position: absolute;
+        margin-left: 40vw;
+        margin-right: 20vw;
+        margin-top: 10vw;
+        {{!-- position: absolute;
         top:50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%); --}}
     }
 
     .login h1{
         font-size: 2.5rem;
         text-align: center;
         text-transform: uppercase;
-        margin-bottom: 1.5rem;
+        margin-bottom: 3rem;
     }
 
     .login p{
