--- a/mernbackend/views/notify.hbs
+++ b/mernbackend/views/notify.hbs
@@ -9,7 +9,8 @@
     *{
         padding:0;
         margin:0;
-        font-family: sans-serif;
+        font-family: cursive;
+        {{!-- font-family: sans-serif; --}}
     }
 
     body{
@@ -22,16 +23,20 @@
 
     .notify{
         position: absolute;
+        margin-left: 37vw;
+        margin-right: 20vw;
+        margin-top: 8vw;
+        {{!-- position: absolute;
         top:50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%); --}}
     }
 
     .notify h1{
         font-size: 2.5rem;
         text-align: center;
         text-transform: uppercase;
-        margin-bottom: 1.5rem;
+        margin-bottom: 3rem;
     }
 
     .notify p{
