--- a/mernbackend/views/register.hbs
+++ b/mernbackend/views/register.hbs
@@ -11,7 +11,8 @@
     *{
         padding:0;
         margin:0;
-        font-family: sans-serif;
+        {{!-- font-family: sans-serif; --}}
+        font-family: cursive;
     }
 
     body{
@@ -24,9 +25,8 @@
 
     .registration-form{
         position: absolute;
-        top:50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
+        margin-left: 37vw;
+        margin-right: 20vw;
     }
 
     .registration-form h1{
